@@ -14,4 +14,5 @@
 ## NetBSD sparc64 on mypants.neurotica.com
 ## FreeBSD i386 on freebsd-i386.neurotica.com
 ## OpenBSD i386 on openbsd-i386.neurotica.com
+## Linux x86 @ derna.itholland.nl
 #00 03 * * * . $HOME/.profile; { $HOME/build/sdcc-build-bootstrap.sh crontab-spawn; $HOME/build/sdcc-build-bootstrap.sh do-upload; } > $HOME/build/build-${HOSTNAME}.log 2>&1
